<resources>
    <string name="app_name">Services Novigrad</string>
    <string name="FirstName">First name</string>
    <string name="LastName">Last name</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Password2">Please repeat your password</string>
    <string name="Address">Address</string>
    <string name="DOB">Date of Birth</string>
    <string name="Docs">Documents</string>
    <string name="UploadDocs">Upload Documents</string>
    <string name="UploadDocsLabel">Click on icons below to upload</string>
    <string name="EmailAddress">Email address</string>
    <string name="SubmitRegisterForm">Submit</string>
    <string name="employeeCheckBox">Are you a Novigrad employee? Check this box to create an employee account.</string>
    <string name="adminFunctionnality1">Manage services</string>
    <string name="adminFunctionnality2">Manage employees</string>
    <string name="adminFunctionnality3">Manage client accounts</string>
    <string name="adminInfo">Welcome, administrator. What would you like to do today?</string>
    <string name="addServiceMessage">Administrator, what would you like to change in the services offered in service novigrad?</string>
    <string name="addService">Add the service</string>
    <string name="removeService">Remove the service</string>
    <string name="modifyService">Modify services</string>
    <string name="modifyServiceMessage">Administrator, what would you like to change about this service?</string>
    <string name="serviceModification1">Change the service name</string>
    <string name="serviceModification2">Add a required document</string>
    <string name="serviceModification3">Remove a required document</string>
    <string name="serviceModification4">Add a required information</string>
    <string name="serviceModification5">Remove required information</string>
    <string name="manageClientMessage">Administrator, which client account would you like to remove?</string>
    <string name="clientModification1">Remove the client account with this username</string>
    <string name="manageEmployeeMessage">Administrator, which employee account would you like to remove?</string>
    <string name="employeeModification1">Remove this employee account</string>
    <string name="appTitle">Services Novigrad</string>
    <string name="employeeInfo">Welcome, sir. What would you like to do today?</string>
    <string name="manageBranch">Manage my branch</string>
    <string name="manageApplications">Manage my branch\'s applications</string>
</resources>