<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C51F1F"
    android:backgroundTint="#FFFFFF"
    tools:context=".AdminMenu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:backgroundTint="#F8FFCF"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/adminInfo2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginHorizontal="20sp"
            android:layout_marginTop="50dp"
            android:layout_weight="0"
            android:text="@string/adminInfo"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/changeServicePriceId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20sp"
            android:layout_marginTop="40dp"
            android:layout_weight="0"
            android:onClick="manageServices"
            android:text="@string/adminFunctionnality1"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/addRequiredDocId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20sp"
            android:layout_marginTop="40dp"
            android:layout_weight="0"
            android:onClick="manageClients"
            android:text="@string/adminFunctionnality3"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/removeRequiredDocId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20sp"
            android:layout_marginTop="40dp"
            android:layout_weight="0"
            android:onClick="manageEmployees"
            android:text="@string/adminFunctionnality2"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>