<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddServiceForm">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#D3FFA2"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:fontFamily="@font/actor"
            android:text="Novigrad Service"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="55dp"
            tools:layout_editor_absoluteY="16dp" />

        <TextView
            android:id="@+id/adminInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="0"
            android:text="@string/addServiceMessage"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/serviceName1"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="60dp"
            android:layout_weight="0"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Service name" />

        <TextView
            android:id="@+id/functionnality"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="0"
            android:text="@string/addService"
            android:textColor="#0C2A95"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/functionnality2"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_weight="0"
            android:text="@string/removeService"
            android:textColor="#0C2A95"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/functionnality3"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_weight="0"
            android:text="@string/modifyService"
            android:textColor="#0C2A95"
            android:textSize="24sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>