<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C51F1F"
    android:backgroundTint="#FFFFFF"
    tools:context=".EmployeeMenu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:backgroundTint="#F8FFCF"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/employee_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginHorizontal="20sp"
            android:layout_marginTop="50dp"
            android:layout_weight="0"
            android:text="@string/employeeInfo"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/btn_manage_branch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20sp"
            android:layout_marginTop="40dp"
            android:layout_weight="0"
            android:onClick="manageBranch"
            android:text="@string/manageBranch"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/btn_manage_applications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20sp"
            android:layout_marginTop="40dp"
            android:layout_weight="0"
            android:onClick="manageServices"
            android:text="@string/manageApplications"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>